Fixing tooltips within th's (vertical overflow) also tooltip refine
1. tooltips in table heads where being overflow-hiddened so th's need to
be unhidden but somehow truncateable
2. Refinement of tooltips slightly, visually just a color change to
bring this inline with structure

--- a/components/tooltip/skin.css
+++ b/components/tooltip/skin.css
@@ -1,10 +1,16 @@
 %tooltip-bubble,
 %tooltip-tail {
   color: var(--white);
-  background-color: var(--gray-800);
+  background-color: var(--gray-500);
+}
+%tooltip-tail {
+  background-color: transparent !important;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  border-top: 18px solid var(--gray-500);
 }
 %tooltip-bubble {
   font-weight: normal;
   border-radius: var(--decor-radius-200);
-  box-shadow: 0 3px 1px 0 rgba(var(--black), 0.12);
+  box-shadow: 0 3px 1px 0 rgba(var(--black), .21);
 }
